2A/05_Projet_GL/src/test/deca/context/valid/complet/65_this_method.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

    int x ;

    void init() {
        this.x = 0 ;
    }

    void debut() {
        this.init();
    }
}



