2A/05_Projet_GL/src/test/deca/context/invalid/complet/86_init_methode.deca
// Description :
//   afféctation d'un identificateur de methode 
// Resultats :
//    ligne 14 :  nature attendu : Field
// Historique :
//  cree le 18/01/2024

class A {
    int x; 
    int get() {
        
    }

}

class B {
    A a ;
    void inti() {
        a.get = 0 ;
    } 
}